--- a/css/public.less
+++ b/css/public.less
@@ -72,7 +72,6 @@ body{
 			height:60px;
 			width:214px;
 			overflow: hidden;
-			background-color: @red;
 			&>.logo1{
 				position: absolute;
 				left:0;top:0;
@@ -187,7 +186,9 @@ body{
 				color: #fff;
 				background-color: lighten(#189cbb,7%);
 				i{
-					cursor:pointer;				
+					cursor:pointer;	
+					padding-bottom: 2px;
+					padding-right: 2px;			
 				}
 				.alertpanel{
 					width: 180px;
