--- a/css/public.css
+++ b/css/public.css
@@ -68,6 +68,7 @@ body .topbar > .logobox {
   height: 60px;
   width: 214px;
   overflow: hidden;
+  background-color: #d02b1e;
 }
 body .topbar > .logobox > .logo1 {
   position: absolute;
