--- a/css/public.less
+++ b/css/public.less
@@ -72,6 +72,7 @@ body{
 			height:60px;
 			width:214px;
 			overflow: hidden;
+			background-color: @red;
 			&>.logo1{
 				position: absolute;
 				left:0;top:0;
