--- a/css/style.css
+++ b/css/style.css
@@ -1,232 +1,79 @@
-html,body{
-	background-color: #eee;
-	height: 100%;
+.newsBox {
+  position: relative;
+  width: 100%;
+  padding-top: 30px;
+  background-color: #eee;
 }
-.aaaa{
-	height:70%;
-	width:350px;
-	float: left;
-	margin-right: 30px;
-	margin-bottom: 30px;
+.newsBox .boxBanner {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 15px;
+  font-size: 13px;
+  color: #fff;
+  background-color: #BE171A;
 }
-.vertical-center{
-	display: block;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform:translate(-50%,-50%);
-	-ms-transform:translate(-50%,-50%); 
-	-moz-transform:translate(-50%,-50%); 	
-	-webkit-transform:translate(-50%,-50%); 
-	-o-transform:translate(-50%,-50%); 
+.newsBox .boxContent {
+  position: relative;
+  width: 100%;
+  padding: 20px 30px;
 }
-
-														/*DOCUMENT CENTER*/
-
-.documentContainer{
-	width: 100%;
-	height: 100%;
-	background-color: #fff;
-	padding-top: 45px;
-	position: relative;
+.newsBox .boxContent .title {
+  font-size: 18px;
+  color: #000;
+  margin-bottom: 5px;
 }
-.documentContainer .title{
-	width: 100%;
-	background-color: #482625;
-	padding-left: 15px;
-	height: 45px;
-	line-height: 45px;
-	color: #fff;
-	font-size: 14px;
-	font-weight: normal;
-	position: absolute;
-	top: 0;
-
+.newsBox .boxContent .time {
+  display: block;
+  font-size: 12px;
+  color: #aaa;
+  margin-bottom: 5px;
 }
-.documentContainer .listContainer{
-	width: 100%;
-	height: 100%;
-	padding: 20px 30px;
-	overflow: hidden;
+.newsBox .boxContent > p {
+  font-size: 13px;
+  text-indent: 2em;
+  color: #000;
+  line-height: 20px;
 }
-.documentContainer ul{
-	/*padding: 20px 30px;*/
-	width: 100%;
-	height: 100%;
+.newsBox .boxContent > img {
+  width: 200px;
+  height: 190px;
+  margin: 20px 10px 20px 0;
+  font-weight: normal;
 }
-.documentContainer li{
-	position: relative;
-	display: table;
-	width: 100%;
-	height: 25%;
-	min-height: 56px;
-	max-height: 80px;
+.newsBox .boxContent .nav {
+  width: 60%;
+  height: 60px;
+  margin-left: -15px;
+  margin-bottom: 10px;
+  padding: 0 5px 0 15px;
+  list-style: none;
+  background-color: #fff;
 }
-.documentContainer li a{
-	display: table-cell;
-	vertical-align: middle;
-	position: relative;
+.newsBox .boxContent .nav li {
+  height: 30px;
+  line-height: 30px;
+  font-size: 13px;
+  font-weight: bold;
 }
-.documentContainer li img{
-	position: absolute;
+.newsBox .boxContent .nav li:first-of-type {
+  border-bottom: 1px #eee solid;
 }
-.documentContainer li h6{
-	margin-left: 50px;
-	font-size: 13px;
+.newsBox .boxContent .nav li a {
+  margin-left: 5px;
+  font-size: 12px;
+  font-weight: normal;
 }
-.documentContainer li p{
-	margin-left: 50px;
-	font-size: 12px;
-}
-
-														/*SCHEDULE*/
-.scheduleContainer{
-	width: 100%;
-	height: 100%;
-	background-color: rgba(223,0,0,0.8);
-	padding-top: 63px;
-	position: relative;
-}
-.scheduleContainer .title{
-	padding: 20px;
-	padding-bottom: 0;
-	width: 100%;
-	position: absolute;
-	top: 0;
-}
-.scheduleContainer .title img{
-	position: absolute;
-	right: 20px;
-}
-.scheduleContainer .title strong{
-	display: block;
-	color: #fff;
-	font-size: 22px;
-	font-weight: normal;
-}
-.scheduleContainer .title span{
-	display: block;
-	color: #fff;
-	font-size: 15px;
-}
-.scheduleContainer .listContainer{
-	width: 100%;
-	height: 100%;
-	position: relative;
-	overflow: hidden;
-}
-.scheduleContainer ul{
-	width: 90%;
-	height: 100%;
-	margin: 0 auto;
-}
-.scheduleContainer li{
-	display: table;
-	width: 100%;
-	height: 20%;
-	min-height:40px;
-	max-height:70px;
-	border-bottom: 1px #da6e70 solid;
-}
-.scheduleContainer li:last-of-type{
-	border-bottom: none;
-}
-.scheduleContainer li a{
-	display: table-cell;
-	vertical-align: middle;
-	width: 100%;
-	height: 20px;
-	line-height: 20px;
-	color: #fff;
-	font-size: 14px;
-}
-.scheduleContainer li a span{
-	background-color: #ffc72c;
-	display: block;
-	float: right;
-	width: 45px;
-	height: 20px;
-	line-height: 20px;
-	text-align: center;
-	font-size: 12px;
-	border-radius: 10px;
-}
-
-														/*TASK CENTER*/
-
-.taskContainer{
-	width: 100%;
-	height: 100%;
-	background-color: #fff;
-	position: relative;
-	padding-top: 45px;
-}
-.taskContainer .title{
-	width: 100%;
-	background-color: #eb1e25;
-	padding-left: 15px;
-	height: 45px;
-	line-height: 45px;
-	color: #fff;
-	font-size: 14px;
-	font-weight: normal;
-	position: absolute;
-	top: 0;
-}
-.taskContainer>div{
-	width: 100%;
-	height: 100%;
-	padding: 15px;
-}
-.taskContainer>div>div{
-	width: 33%;
-	height: 33%;
-	padding: 10px;
-	float: left;
-}
-.taskContainer .item{
-	width: 100%;
-	height: 100%;
-	color: #fff;
-	font-size: 20px;
-	border-radius: 5px;
-	background-color: #fdbd15;
-	position: relative;
-	cursor: pointer;
-}
-.taskContainer .item>span{
-}
-#am{
-	background-color: #f6664b;
-}
-#pmt{
-	background-color: #64C7DB;
-}
-#mgis{
-	background-color: #46A7BC;
-}
-#it{
-	background-color: #EF9D18;
-}
-#ems{
-	background-color: #31BF9E;
-}
-#bit{
-	background-color: #607DF0;
-}
-.taskContainer .newMsg:before{
-	content: attr(data-account);
-	display:block;
-	width: 20px;
-	height: 20px;
-	line-height: 20px;
-	border-radius: 50%;
-	border:2px #fff solid;
-	text-align: center;
-	color: #fff;
-	font-size: 12px;
-	position: absolute;
-	right: -10px;
-	top:-10px;
-	background-color: #ed2621;
+.newsBox .boxContent .back {
+  display: block;
+  width: 67px;
+  height: 22px;
+  line-height: 22px;
+  border-radius: 3px;
+  text-align: center;
+  background-color: #F9B117;
+  color: #fff;
+  font-size: 13px;
 }
