--- a/css/media768.css
+++ b/css/media768.css
@@ -96,9 +96,9 @@
     height: auto;
     overflow: hidden;
     position: relative;
-    padding-left: 30px;
+    padding-left: 0px;
     padding-top: 76px;
-    padding-right: 30px;
+    padding-right: 0px;
     padding-bottom: 16px;
   }
   .slideContainer > div {
@@ -154,6 +154,26 @@
   }
   .contitem[id^='origin'] {
     display: none;
+  }
+}
+@media (max-width: 900px) and (min-width: 601px) {
+  .content .slideContainer .contitem#documentblock {
+    padding-left: 30px;
+    padding-right: 7.5px;
+  }
+  .content .slideContainer .contitem#scheduleblock {
+    padding-left: 7.5px;
+    padding-right: 30px;
+  }
+  .content .slideContainer .contitem#stockblock {
+    margin-left: -22.5px;
+    padding-left: 7.5px;
+    padding-right: 30px;
+  }
+  .content .contitem {
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (max-width: 600px) {
