--- a/css/news.css
+++ b/css/news.css
@@ -1,24 +1,28 @@
+html,
+body {
+  height: auto;
+}
+body .content {
+  height: 100%;
+}
 .newsBox {
   position: relative;
   width: 100%;
-  padding-top: 30px;
-  background-color: #eee;
 }
 .newsBox .boxBanner {
-  position: absolute;
-  top: 0;
   width: 100%;
   height: 30px;
   line-height: 30px;
   padding: 0 15px;
   font-size: 13px;
   color: #fff;
-  background-color: #BE171A;
+  background-color: #d02b1e;
 }
 .newsBox .boxContent {
   position: relative;
   width: 100%;
   padding: 20px 30px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .newsBox .boxContent .title {
   font-size: 18px;
