--- a/css/news.less
+++ b/css/news.less
@@ -1,23 +1,29 @@
+@red : #d02b1e;
+html,body{
+	// min-height: 100%;
+	height: auto;
+}
+body .content{
+	// padding-left: 239px;
+	height: 100%;
+}
 .newsBox{
 	position: relative;
 	width: 100%;
-	padding-top: 30px;
-	background-color: #eee;
 	.boxBanner{
-		position: absolute;
-		top: 0;
 		width: 100%;
 		height: 30px;
 		line-height: 30px;
 		padding: 0 15px;
 		font-size: 13px;
 		color: #fff;
-		background-color: #BE171A;
+		background-color: @red;
 	}
 	.boxContent{
 		position: relative;
 		width: 100%;
 		padding: 20px 30px;
+		background-color: rgba(255,255,255,0.8);
 		.title{
 			font-size: 18px;
 			color: #000;
