--- a/css/public.css
+++ b/css/public.css
@@ -703,6 +703,31 @@ body.menuclose .content {
   font-size: 12px;
   overflow: hidden;
 }
+.content .contitem .emptySchedule {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+.content .contitem .emptySchedule img {
+  width: 100%;
+  height: 100%;
+}
+.content .contitem .emptySchedule > div {
+  width: 210px;
+  height: 50px;
+}
+.content .contitem .emptySchedule > div .fa-stack {
+  vertical-align: top;
+  color: #FDAD15;
+}
+.content .contitem .emptySchedule .warning {
+  display: inline-block;
+  height: 50px;
+  line-height: 25px;
+  font-size: 20px;
+  color: #730000;
+}
 .content .contitem .scheduleContainer {
   padding-top: 59px;
   background-color: rgba(223, 0, 0, 0.8);
@@ -832,6 +857,9 @@ body.menuclose .content {
   display: none;
 }
 .content .contitem.nocont > .noContainer {
+  display: block;
+}
+.content .noSchedule .emptySchedule {
   display: block;
 }
 body.alertshow {
