--- a/css/news.less
+++ b/css/news.less
@@ -1,12 +1,11 @@
 @red : #d02b1e;
-html,body{
-	// min-height: 100%;
-	height: auto;
-}
-body .content{
-	// padding-left: 239px;
-	height: 100%;
-}
+// html,body{
+// 	// min-height: 100%;
+// 	height: auto;
+// }
+// body .content{
+// 	overflow-y: scroll;
+// }
 .newsBox{
 	position: relative;
 	width: 100%;
@@ -21,6 +20,7 @@ body .content{
 	}
 	.boxContent{
 		position: relative;
+		overflow-y: scroll;
 		width: 100%;
 		padding: 20px 30px;
 		background-color: rgba(255,255,255,0.8);
