--- a/css/news.css
+++ b/css/news.css
@@ -1,10 +1,3 @@
-html,
-body {
-  height: auto;
-}
-body .content {
-  height: 100%;
-}
 .newsBox {
   position: relative;
   width: 100%;
@@ -20,6 +13,7 @@ body .content {
 }
 .newsBox .boxContent {
   position: relative;
+  overflow-y: scroll;
   width: 100%;
   padding: 20px 30px;
   background-color: rgba(255, 255, 255, 0.8);
