--- a/css/public.less
+++ b/css/public.less
@@ -69,6 +69,7 @@ body{
 		&>.logobox{
 			position:absolute;
 			left:0;top:0;
+			display: block;
 			height:60px;
 			width:214px;
 			overflow: hidden;
