--- a/css/themezgf.less
+++ b/css/themezgf.less
@@ -29,6 +29,45 @@ body.themezgf{
 			background-image: url(../img/themezgf-fish2.jpg);
 			background-repeat: no-repeat;
 			background-position: bottom right;
+			&>div{
+				padding: 0px 5px;
+				&>div.item{
+					background-repeat: no-repeat;
+					background-size: contain;
+					background-position: center;
+					&#GAP{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item1.png);
+					}
+					&#AM{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item2.png);
+					}
+					&#PMT{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item3.png);
+					}
+					&#MGIS{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item2.png);
+					}
+					&#IT{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item5.png);
+					}
+					&#EMS{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item6.png);
+					}
+					&#BIT{
+						background-color:transparent;
+						background-image: url(../img/themezgf-item3.png);
+					}
+					&.newMsg::before{
+						display: none;
+					}
+				}
+			}
 		}
 		.contitem .scheduleContainer{
 			background-image: url(../img/themezgf-mai.png);
