--- a/css/public.css
+++ b/css/public.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  min-height: 650px;
+  min-height: 610px;
 }
 .menu,
 .topbar {
@@ -279,7 +279,7 @@ body .leftbar {
   width: 214px;
   height: 100%;
   padding-top: 60px;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: #2f1717;
   z-index: 5;
 }
@@ -672,7 +672,7 @@ body.menuclose .content {
 .content .contitem .documentContainer .listContainer {
   width: 100%;
   height: 100%;
-  padding: 10px 20px;
+  padding: 8px 20px;
   overflow: hidden;
 }
 .content .contitem .documentContainer ul {
