--- a/css/public.less
+++ b/css/public.less
@@ -13,7 +13,7 @@
 @red : #d02b1e;
 html,body{
 	height:100%;
-	min-height:650px;
+	min-height:610px;
 }
 .menu,.topbar{
 	-webkit-user-select: none;  /* Chrome all / Safari all */
@@ -294,7 +294,7 @@ body{
 		width:@menuw1;
 		height:100%;
 		padding-top: 60px;
-		overflow-y: scroll;
+		overflow-y: auto;
 		background-color: lighten(#281414,2%);
 		z-index:5;
 		&>.menu{
@@ -707,7 +707,7 @@ body.menuclose{
 			.listContainer{
 				width: 100%;
 				height: 100%;
-				padding: 10px 20px;
+				padding: 8px 20px;
 				overflow: hidden;
 			}
 			ul{
