更新了滑瓶轮播

--- a/css/media768.css
+++ b/css/media768.css
@@ -186,6 +186,10 @@
   }
 }
 @media (max-width: 600px) {
+  body .topbar .myfavorite .alertpanel {
+    width: 100% !important;
+    overflow-x: auto;
+  }
   body .content {
     padding-left: 16px !important;
     padding-right: 16px !important;
