--- a/css/media768.less
+++ b/css/media768.less
@@ -235,11 +235,20 @@
 			padding-left:30px;
 			padding-right: 30px;
 		}
+
 	}
 }
 // 600以下 使用手机布局
 @media(max-width:600px){
 	body{
+		.topbar{
+			.myfavorite{
+				.alertpanel{
+					width: 100% !important;
+					overflow-x: auto;
+				}
+			}
+		}
 		.content{
 			padding-left: 16px !important;
 			padding-right: 16px !important;
