--- a/css/news.less
+++ b/css/news.less
@@ -6,80 +6,105 @@
 // body .content{
 // 	overflow-y: scroll;
 // }
-.newsBox{
-	position: relative;
-	width: 100%;
-	.boxBanner{
-		width: 100%;
-		height: 30px;
-		line-height: 30px;
-		padding: 0 15px;
-		font-size: 13px;
-		color: #fff;
-		background-color: @red;
-	}
-	.boxContent{
-		position: relative;
-		overflow-y: scroll;
-		width: 100%;
-		padding: 20px 30px;
-		background-color: rgba(255,255,255,0.8);
-		.title{
-			font-size: 18px;
-			color: #000;
-			margin-bottom: 5px;
-		}
-		.time{
-			display: block;
-			font-size: 12px;
-			color: #aaa;
-			margin-bottom: 5px;
-		}
-		&>p{
-			font-size: 13px;
-			text-indent: 2em;
-			color: #000;
-			line-height: 20px;
-		}
-		&>img{
-			width: 200px;
-			height: 190px;
-			margin: 20px 10px 20px 0;
-			font-weight: normal;
-		}
-		.nav{
-			width: 60%;
-			height: 60px;
-			margin-left: -15px;
-			margin-bottom: 10px;
-			padding: 0 5px 0 15px;
-			list-style: none;
-			background-color: #fff;
-			li{
+html{
+	min-height: 100%;
+	height: auto;
+}
+body{
+	min-height: 100%;
+	height: auto;
+	.content{
+		height: auto;
+		overflow: hidden;
+		.newsBox{
+			position: relative;
+			width: 100%;
+			height: auto;
+			overflow: hidden;
+			.boxBanner{
+				width: 100%;
 				height: 30px;
 				line-height: 30px;
+				padding: 0 15px;
 				font-size: 13px;
-				font-weight: bold;
-				&:first-of-type{
-					border-bottom: 1px #eee solid;
+				color: #fff;
+				background-color: @red;
+			}
+			.boxContent{
+				position: relative;
+				overflow: auto;
+				width: 100%;
+				padding: 20px 30px;
+				background-color: rgba(255,255,255,0.8);
+				.title{
+					font-size: 18px;
+					color: #000;
+					margin-bottom: 5px;
 				}
-				a{
-					margin-left: 5px;
+				.time{
+					display: block;
 					font-size: 12px;
+					color: #aaa;
+					margin-bottom: 5px;
+				}
+				&>p{
+					font-size: 13px;
+					text-indent: 2em;
+					color: #000;
+					line-height: 20px;
+				}
+				&>img{
+					width: 200px;
+					height: 190px;
+					margin: 20px 10px 20px 0;
 					font-weight: normal;
 				}
+				.nav{
+					width: 60%;
+					height: 60px;
+					margin-left: -15px;
+					margin-bottom: 10px;
+					padding: 0 5px 0 15px;
+					list-style: none;
+					background-color: #fff;
+					li{
+						height: 30px;
+						line-height: 30px;
+						font-size: 13px;
+						font-weight: bold;
+						position: relative;
+						&:first-of-type{
+							border-bottom: 1px #eee solid;
+						}
+						a{
+							display: block;
+							position: absolute;
+							left: 0;
+							top: 0;
+							padding-left: 45px;
+							width: 100%;
+							height: 100%;
+							overflow: hidden;
+							text-overflow: ellipsis;
+							white-space: nowrap;
+							margin-left: 5px;
+							font-size: 12px;
+							font-weight: normal;
+						}
+					}
+				}
+				.back{
+					display: block;
+					width: 67px;
+					height: 22px;
+					line-height: 22px;
+					border-radius: 3px;
+					text-align: center;
+					background-color: #F9B117;
+					color: #fff;
+					font-size: 13px;
+				}
 			}
-		}
-		.back{
-			display: block;
-			width: 67px;
-			height: 22px;
-			line-height: 22px;
-			border-radius: 3px;
-			text-align: center;
-			background-color: #F9B117;
-			color: #fff;
-			font-size: 13px;
 		}
 	}
 }
